<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="@dimen/largeSpace"
    >

    <LinearLayout
        android:id="@+id/mainCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/cars_background"
        android:orientation="horizontal"
        android:padding="@dimen/largeSpace"

        >

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="120dp"
            android:layout_height="80dp"
            android:layout_gravity="top"
            android:layout_marginEnd="@dimen/largeSpace"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:layout_weight="1"
            android:src="@drawable/person_image"
            app:shapeAppearanceOverlay="@style/CornerRadiusImageview"
            />

        <LinearLayout
            android:id="@+id/informationLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="2"
            >

            <LinearLayout
                android:id="@+id/nameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/person_name"
                    android:textColor="@color/txt_title"
                    android:textSize="@dimen/txt_title"
                    android:textStyle="bold"

                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/circle_background"
                    android:gravity="end"
                    android:paddingStart="@dimen/mediumSpace"
                    android:paddingEnd="@dimen/mediumSpace"
                    android:text="@string/time"
                    android:textColor="@color/white"
                    android:textSize="@dimen/txt_sub_title" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/jopLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/smallSpace"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/job_name"
                    android:textColor="@color/txt_sup_title"
                    android:textSize="@dimen/txt_sub_title"
                    android:gravity="start"
                    />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/country"
                    android:textColor="@color/txt_sup_title"
                    android:textSize="@dimen/txt_sub_title"
                    android:gravity="end"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/locationLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/smallSpace"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/location"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/txt_sub_title"
                    android:gravity="start"
                    android:drawableStart="@drawable/ic_location"
                    />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/date"
                    android:textColor="@color/gray_lite"
                    android:textSize="@dimen/txt_sub_title"
                    android:gravity="end"
                    />
        </LinearLayout>

            <LinearLayout
                android:id="@+id/rateLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/smallSpace"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reviews"
                    android:textColor="@color/txt_title"
                    android:textSize="@dimen/txt_sub_title"
                    android:gravity="start"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/smallSpace"
                    android:text="@string/rate_value"
                    android:textColor="@color/txt_title"
                    android:textStyle="bold"
                    android:textSize="@dimen/txt_sub_title"
                    android:gravity="start"
                    android:drawablePadding="@dimen/smallSpace"

                    app:drawableEndCompat="@drawable/ic_star" />
            </LinearLayout>


    </LinearLayout>



</LinearLayout>
</LinearLayout>